Fix type guard code action to use error type name
instead of raw error type name

(cherry picked from commit b50639ee6a0dc52476a49e7b72b2704a5ee6984b)